<resources>
    <string name="app_name">Projeto 02 - IMDMarket</string>
    <string name="app_title">IMDMARKET</string>
    <string name="login_fragment_main_text">Faça login</string>
    <string name="login_input_hint">Usuário</string>
    <string name="password_input_text">Senha</string>
    <string name="login_button_text">Entrar</string>
    <string name="forgot_password_button_text">Esqueci meu login/senha</string>
    <string name="menu_title">O que deseja fazer?</string>
    <string name="menu_option_1">Cadastrar produto</string>
    <string name="menu_option_2">Listar produtos</string>
    <string name="menu_option_3">Alterar produto</string>
    <string name="menu_option_4">Deletar produtos</string>
    <string name="menu_option_5">Buscar produto</string>
    <string name="cadastrar_produto_title">Cadastrar Produto</string>
    <string name="codigo_produto_hint">Código</string>
    <string name="nome_produto_hint">Nome</string>
    <string name="descricao_produto_hint">Descrição</string>
    <string name="estoque_produto_hint">Estoque</string>
    <string name="salvar_button_text">Salvar</string>
    <string name="limpar_button_text">Limpar</string>
    <string name="alterar_produto_title">Alterar Produto</string>
    <string name="alterar_button_text">Alterar</string>
    <string name="deletar_produto_title">Deletar Produto</string>
    <string name="deletar_button_text">Deletar</string>
    <string name="home_button_description">Home Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listar_produtos_title">Listar Produtos</string>
    <string name="back_button"><![CDATA[<]]></string>
    <string name="produto_estoque_placeholder">Estoque:</string>
    <string name="produto_descricao_placeholder">Descrição:</string>
    <string name="produto_nome_placeholder">Nome:</string>
    <string name="produto_codigo_placeholder">Código:</string>
    <string name="voltar_button_text">Voltar</string>
</resources>