<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="50dp"
    android:paddingHorizontal="30dp">

    <TextView
        android:id="@+id/produto_codigo_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:maxLines="1"
        android:textSize="22sp"
        android:text="@string/produto_codigo_placeholder" />

    <TextView
        android:id="@+id/produto_codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/produto_nome_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:maxLines="1"
        android:textSize="22sp"
        android:text="@string/produto_nome_placeholder" />

    <TextView
        android:id="@+id/produto_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/produto_descricao_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:maxLines="1"
        android:textSize="22sp"
        android:text="@string/produto_descricao_placeholder" />

    <TextView
        android:id="@+id/produto_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="22sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/produto_estoque_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:textStyle="bold"
        android:maxLines="1"
        android:textSize="22sp"
        android:text="@string/produto_estoque_placeholder" />

    <TextView
        android:id="@+id/produto_estoque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/voltar_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_round_corner"
        android:text="@string/voltar_button_text"
        android:textSize="22sp" />
</LinearLayout>