<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/menu_title"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_title">

        <Button
            android:id="@+id/cadastrar_produto_btn"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_round_corner"
            android:text="@string/menu_option_1"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/listar_button"/>

        <Button
            android:id="@+id/listar_button"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_round_corner"
            android:text="@string/menu_option_2"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cadastrar_produto_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/alterar_produto_btn"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_round_corner"
            android:text="@string/menu_option_3"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cadastrar_produto_btn"
            app:layout_constraintEnd_toStartOf="@id/deletar_produto_btn"/>

        <Button
            android:id="@+id/deletar_produto_btn"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_round_corner"
            android:text="@string/menu_option_4"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/alterar_produto_btn"
            app:layout_constraintTop_toBottomOf="@id/listar_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>